# propra_webscience_ws24

./: .gitignore  .pre-commit-config.yaml  KNN_Tfidf.ipynb  README.md  Sentiment140_EDA_Data_Preparation.ipynb  decision_tree.ipynb  eda.ipynb  naive_bayes.ipynb  preprocessing.ipynb  pyproject.toml  taskfile.yaml
Abschlussbericht/: 1-einleitung.tex  2-aufgabenverteilung.tex  3-teaminterne-organisation.tex  4-datensaetze-und-problemstellung.tex  5-ansaetze.tex  6-experimente.tex  7-ausblick.tex  8-zusammenfassung-und-fazit.tex  9-appendix.tex  AIGpaper.cls  Makefile  abschlussbericht-stimmungsanalyse-mit-twitter.tex  references.bib
Abschlusspräsentation/: Makefile  aig_beamer.tex  beamerthemeaig.sty  praesentation.tex  references.bib
Protokolle/: ProPra_WebScience_Protokoll_03.12.24.md  ProPra_WebScience_Protokoll_05.11.24.md  ProPra_WebScience_Protokoll_09.10.24.md  ProPra_WebScience_Protokoll_10.12.24.md  ProPra_WebScience_Protokoll_15.10.24.md  ProPra_WebScience_Protokoll_16.12.24.md  ProPra_WebScience_Protokoll_22.10.24.md  ProPra_WebScience_Protokoll_24-10-09.md  ProPra_WebScience_Protokoll_24-10-15.md  ProPra_WebScience_Protokoll_24-11-05.md  ProPra_WebScience_Protokoll_24-11-26.md  ProPra_WebScience_Protokoll_24-12-03.md  ProPra_WebScience_Protokoll_24-12-10.md  ProPra_WebScience_Protokoll_24-12-16.md  ProPra_WebScience_Protokoll_24-12-17.md  ProPra_WebScience_Protokoll_24-12-30.md  ProPra_WebScience_Protokoll_25-01-14.md  ProPra_WebScience_Protokoll_25-01-21.md  ProPra_WebScience_Protokoll_25-01-28.md  ProPra_WebScience_Protokoll_25-02-04.md  (+11 more)
(+86 files in other folders)
